<resources>
    <string name="app_name">Relative_Layout</string>
    <string name="back_button">Back Button</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="enter_your_name_here">Enter your Name here</string>
    <string name="email">Email</string>
    <string name="enter_your_email_here">Enter your Email here</string>
    <string name="enter_your_password_here">Enter your Password here</string>
    <string name="password">Password</string>
    <string name="java">Java</string>
    <string name="languages">Languages</string>
    <string name="kotlin">Kotlin</string>
    <string name="designs">Designs</string>
    <string name="xml">XML</string>
    <string name="jetpack_compose">Jetpack Compose</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="others">Others</string>
    <string name="female">Female</string>
    <string name="phone">Phone</string>
    <string name="enter_your_phone_number_here">Enter your Phone Number here</string>
</resources>