<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:isScrollContainer="true"
    android:scrollbars="none"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:src="@drawable/icon_back" />

        <ImageView
            android:id="@+id/androidLogo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/android_logo"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/textSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:text="@string/sign_up"
            android:layout_below="@id/androidLogo"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textSignUp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/name"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textName"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_shape_for_edit_text"
                android:hint="@string/enter_your_name_here"
                android:inputType="textPersonName"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/phone"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textPhone"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_shape_for_edit_text"
                android:hint="@string/enter_your_phone_number_here"
                android:inputType="number"
                android:maxLength="11"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutPhone"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textEmail"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_shape_for_edit_text"
                android:hint="@string/enter_your_email_here"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutEmail"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textPassword"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_shape_for_edit_text"
                android:hint="@string/enter_your_password_here"
                android:inputType="textPassword"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textLanguages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutPassword"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/languages"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkBoxJava"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textLanguages"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/java" />

        <CheckBox
            android:id="@+id/checkboxKotlin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/checkBoxJava"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/checkBoxJava"
            android:text="@string/kotlin" />

        <TextView
            android:id="@+id/textDesigns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBoxJava"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/designs"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkBoxXML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textDesigns"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/xml" />

        <CheckBox
            android:id="@+id/checkboxJetpackCompose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/checkBoxXML"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/checkBoxXML"
            android:text="@string/jetpack_compose" />

        <TextView
            android:id="@+id/textGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBoxXML"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/gender"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textGender"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioBtnMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radioBtnFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/radioBtnOthers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/others" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroupGender"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_shape_for_edit_text"
            android:text="@string/sign_up"
            android:textAllCaps="false" />

    </RelativeLayout>

</ScrollView>